--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -7,7 +7,7 @@
 
   <%= f.text_area :items %>
 
-  <%= f.hidden_field :company, :value => session[:company %>
+  <%= f.hidden_field :company, :value => session[:company] %>
 
   <%= f.primary 'Save invoice', data: { disable_with: 'Saving...' } %>
 <% end %>
