Server side updates

--- a/app/views/entries/sticker.html.erb
+++ b/app/views/entries/sticker.html.erb
@@ -1,8 +1,9 @@
 <div>
-  <h1 style="float:left;margin-left:25px;margin-right:5px;margin-top:5px">
-    <%= @number %>
-  </h1>
-  <p style="float:left;margin-top:-10px">
+  <p style="margin-left:12px">
     <%= @barcode %>
   </p>
+  <h1 style="margin-left:19px;font-size:25px;margin-top:-30px">
+    <%= @abb %>
+    <%= @number %>
+  </h1>
 </div>
