--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -15,7 +15,7 @@
   <%= f.text_field :ordered, label: 'Parts ordered?' %>
 
   <%= f.text_field :testera, label: 'First tester' %>
-  <%= f.text_field :testerb, label: 'Second tester?' %>
+  <%= f.text_field :testerb, label: 'Second tester' %>
 
   <%= f.control_group :test do %>
     <%= f.check_box :test, label: 'Test OK' %>
