--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -59,7 +59,7 @@
           <% if can? :manage, Classifications %>
             <li>
               <%= link_to(classifications_path) do %>
-                <i class="icon-file icon-white"></i>Class panel
+                <i class="icon-ok icon-white"></i>Class panel
               <% end %>
             </li>
           <% end %>
