--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,7 +1,3 @@
-@import 'bootswatch/flatly/variables';
-
 @import "bootstrap";
 body { padding-top: 60px; }
-@import "bootstrap-responsive";
-
-@import "bootswatch/flatly/bootswatch"
+/*@import "bootstrap-responsive";*/
