--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Badger - Sign up') %>
 
-<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name), style: :horizontal, left: "col-sm-2", right: "col-sm-6") do |f| %>
   <%= devise_error_messages! %>
 
   <legend>Sign up</legend>
@@ -12,7 +12,9 @@
   
   <%= f.hidden_field :initial_role, :value => params[:initial_role] %>
 
-  <%= f.primary 'Sign up', data: { disable_with: 'Signing up...' } %>
+  <%= f.form_group do %>
+ 	<%= f.submit 'Sign up', data: { disable_with: 'Signing up...' } %>
+  <% end %>
 <% end %>
 
 <%= render "devise/shared/links" %>
