--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,20 +3,30 @@
   <p>Welcome to this data storage.</p>
   <% unless user_signed_in? %>
     <p>
-      <%= link_to("Login", new_user_session_path, :class => 'btn btn-primarybtn-large') %>
-      <%= link_to("Sign up", new_user_registration_path, :class => 'btn btn-primarybtn-large') %>
+      <%= link_to("Login", new_user_session_path, :class => 'btn btn-primary btn-large') %>
+      <%= link_to("Sign up", new_user_registration_path, :class => 'btn btn-primary btn-large') %>
     </p>
   <% else %>
     <% if can? :see_data, Entry %>
-      <p>These links are also in the top right menu.</p>
       <% @roles.each do |role| %>
         <% unless role.name == 'user' or role.name == 'technician' or role.name == 'manager' or role.name == 'admin' %>
-          <p>
+          <div>
             <h5 class="button-title"><%= role.name.titleize %></h5>
             <%= link_to("Entries", entries_path(company: role.name), :class => 'btn btn-primary') %>
             <%= link_to("Invoices", invoices_path(company: role.name), :class => 'btn btn-primary') %>
-          </p>
+            <% if can? :manage, Stats %>
+              <%= link_to("Stats", stats_path(company: role.name), :class => 'btn btn-primary') %>
+            <% end %>
+          </div>
         <% end %>
+      <% end %>
+      <% if can? :manage, User %>
+        <hr/>
+        <h5 class="button-title">Admin Pages</h5>
+        <%= link_to("User Panel", users_path, :class => 'btn btn-primary') %>
+        <%= link_to("Appliance Panel", appliances_path, :class => 'btn btn-primary') %>
+        <%= link_to("Class Panel", classifications_path, :class => 'btn btn-primary') %>
+        <%= link_to("History Panel", history_index_path, :class => 'btn btn-primary') %>
       <% end %>
     <% else %>
       You will be assigned to your respective company soon.<br>
