--- a/app/views/home/report.html.erb
+++ b/app/views/home/report.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, 'Badger - Report error') %>
 
-<%= bootstrap_form_for :home, :url => send_report_path, help: :block do |f| %>  
+<%= bootstrap_form_for :home, :url => send_report_path, style: :horizontal, left: "col-sm-2", right: "col-sm-4", help: :block do |f| %>  
   <legend>Report error</legend>
   <%= f.text_area :message %>
-  <%= f.primary 'Send report', data: { disable_with: 'Sending...' } %>
+  <%= f.form_group do %>
+  	<%= f.submit 'Send report', data: { disable_with: 'Sending...' } %>
+  <% end %>
 <% end %>
 
 <%= link_to "Back", invoices_path %>
