--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,29 @@
     <%= yield(:head) %>
   </head>
   <body class="<%= controller_name %> <%= action_name %>">
-    <div class="navbar navbar-fixed-top">
-      <nav class="navbar-inner">
-        <div class="container">
-          <%= render 'layouts/navigation' %>
+    <header class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <% if user_signed_in? %>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          <% end %>
+          <a class="navbar-brand" href="/">Badger</a>
         </div>
-      </nav>
-    </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <nav class="collapse navbar-collapse navbar-collapse-1" role="navigation">
+          <% if user_signed_in? %>
+            <%= render 'layouts/navigation' %>
+          <% end %>
+        </nav><!-- /.navbar-collapse -->
+      </div>
+    </header>
     <div id="main" role="main">
       <div class="container">
         <div class="content">
@@ -34,7 +50,7 @@
     </div> <!--! end of #main -->
     <footer>
       <div class="container">
-        <p class="pull-right muted">&copy; nohm 2013</p>
+        <p class="pull-right text-muted"><%= link_to("Report an error", report_path) %> - &copy; nohm 2013</p>
       </div>
     </footer>
   </body>
