--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
   <%= f.hidden_field :initial_role, :value => params[:initial_role] %>
 
   <%= f.form_group do %>
- 	<%= f.submit 'Sign up', data: { disable_with: 'Signing up...' } %>
+ 	<%= f.submit 'Sign up', data: { disable_with: 'Signing up...' }, class: "btn btn-primary" %>
   <% end %>
 <% end %>
 
