--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -42,7 +42,7 @@
   <p>First save the entry, then show it and there you can add images.</p>
  
   <%= f.form_group do %>
-    <%= f.submit 'Save entry', data: { disable_with: 'Saving...' } %>
+    <%= f.submit 'Save entry', data: { disable_with: 'Saving...' }, class: "btn btn-primary" %>
   <% end %>
 <% end %>
  
