--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -10,7 +10,7 @@
   <%= f.hidden_field :company, :value => session[:company] %>
 
   <%= f.form_group do %>
-    <%= f.submit 'Save invoice', data: { disable_with: 'Saving...' } %>
+    <%= f.submit 'Save invoice', data: { disable_with: 'Saving...' }, class: "btn btn-primary" %>
   <% end %>
 <% end %>
 
