--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
               <span class="icon-bar"></span>
             </button>
           <% end %>
-          <a class="navbar-brand" href="/">Badger</a>
+          <%= link_to("Badger", root_path, :class => "navbar-brand") %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
